# hdx-python-database

./: .buildinfo  .coveragerc  README.md  genindex.html  hatch.toml  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-requirements.txt
.config/: pre-commit-config.yaml
.doctrees/: environment.pickle  index.doctree
.github/workflows/: publish.yaml  run-python-tests.yml
doc/: main.md
docs/: main.md
documentation/: conf.py  index.md  index.rst  main.md  mkdocs.yaml  pydoc-markdown.yaml
src/hdx/database/: __init__.py  database.py  dburi.py  no_timezone.py  postgres.py  postgresql.py  utils.py  version.py  views.py  with_timezone.py
tests/: test_database.db
tests/fixtures/: test.db
tests/hdx/database/: __init__.py  conftest.py  dbtestdate.py  test_database.py  test_dburi.py  test_drop_recreate.py  test_postgresql.py  test_recreate.py  test_reflect.py  test_ssh.py
